# api/openapi/medincident.swagger.json
@@ -1830,6 +1830,36 @@
         ]
       }
     },
+    "/v1/query/clinics/{clinicId}/departments:count": {
+      "get": {
+        "operationId": "OrgStructureQueryService_CountDepartmentsByClinic",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CountDepartmentsByClinicResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "clinicId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "OrgStructureQueryService"
+        ]
+      }
+    },
     "/v1/query/clinics/{clinicId}/employees": {
       "get": {
         "operationId": "MembershipQueryService_ListEmployeesByClinic",
@@ -1867,6 +1897,36 @@
             "required": false,
             "type": "integer",
             "format": "int32"
+          }
+        ],
+        "tags": [
+          "MembershipQueryService"
+        ]
+      }
+    },
+    "/v1/query/clinics/{clinicId}/employees:count": {
+      "get": {
+        "operationId": "MembershipQueryService_CountEmployeesByClinic",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CountEmployeesByClinicResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "clinicId",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "tags": [
@@ -2008,6 +2068,36 @@
         ]
       }
     },
+    "/v1/query/departments/{departmentId}/employees:count": {
+      "get": {
+        "operationId": "MembershipQueryService_CountEmployeesByDepartment",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CountEmployeesByDepartmentResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "departmentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "MembershipQueryService"
+        ]
+      }
+    },
     "/v1/query/departments/{departmentId}/responsible": {
       "get": {
         "operationId": "MembershipQueryService_GetDepartmentResponsible",
@@ -2125,6 +2215,43 @@
           {
             "name": "state",
             "description": "Optional state filter. When empty, all states are returned.\nValid values: scheduled, active, ended, cancelled.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "MembershipQueryService"
+        ]
+      }
+    },
+    "/v1/query/employees/{employeeId}/vacations:count": {
+      "get": {
+        "operationId": "MembershipQueryService_CountVacationsByEmployee",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CountVacationsByEmployeeResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "employeeId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "state",
+            "description": "Optional state filter. When empty, counts all states.\nValid values: scheduled, active, ended, cancelled.",
             "in": "query",
             "required": false,
             "type": "string"
@@ -2427,6 +2554,36 @@
         ]
       }
     },
+    "/v1/query/organizations/{organizationId}/clinics:count": {
+      "get": {
+        "operationId": "OrgStructureQueryService_CountClinicsByOrganization",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CountClinicsByOrganizationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "organizationId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "OrgStructureQueryService"
+        ]
+      }
+    },
     "/v1/query/organizations/{organizationId}/dispatchers": {
       "get": {
         "operationId": "MembershipQueryService_ListOrgDispatchers",
@@ -2494,6 +2651,36 @@
             "required": false,
             "type": "integer",
             "format": "int32"
+          }
+        ],
+        "tags": [
+          "MembershipQueryService"
+        ]
+      }
+    },
+    "/v1/query/organizations/{organizationId}/employees:count": {
+      "get": {
+        "operationId": "MembershipQueryService_CountEmployeesByOrganization",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CountEmployeesByOrganizationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "organizationId",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "tags": [
@@ -3551,7 +3738,61 @@
         }
       }
     },
+    "v1CountClinicsByOrganizationResponse": {
+      "type": "object",
+      "properties": {
+        "total": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "v1CountDepartmentsByClinicResponse": {
+      "type": "object",
+      "properties": {
+        "total": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "v1CountEmployeesByClinicResponse": {
+      "type": "object",
+      "properties": {
+        "total": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "v1CountEmployeesByDepartmentResponse": {
+      "type": "object",
+      "properties": {
+        "total": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "v1CountEmployeesByOrganizationResponse": {
+      "type": "object",
+      "properties": {
+        "total": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
     "v1CountOrganizationsResponse": {
+      "type": "object",
+      "properties": {
+        "total": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "v1CountVacationsByEmployeeResponse": {
       "type": "object",
       "properties": {
         "total": {
